deployment/catalogue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
spec:
  selector:
    app: nr-mt
  ports:
  - protocol: TCP
    port: 80
