deployment/manager-service.yml
apiVersion: v1
kind: Service
metadata:
  name: manager
spec:
  selector:
    app: nr-mt
  ports:
  - protocol: TCP
    port: 3000
