deployment/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: nr-mt
  ports:
  - protocol: TCP
    port: 27017
 # externalIPs:
 # - 192.168.1.83
