deployment/registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: nr-mt
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4873
